# Spore

./: .gitignore  README.md  index.md  program.md  pyproject.toml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ContributionToken.sol  HyphaToken.sol  MycoToken.sol  SporeToken.sol  StakeManager.sol  Substrate.sol
spec/: protocol.md  tokenomics.md
spore/: __init__.py  agent.py  artifact_sync.py  challenge.py  challenge_state.py  cli.py  control.py  control_store.py  daemon.py  gossip.py  graph.py  llm.py  loop.py  node.py  query.py  record.py  reputation.py  rewards.py  runner.py  store.py  token.py  token_cli.py  token_config.py  verify.py  wire.py  wrapper.py
spore/explorer/: __init__.py  server.py
spore/explorer/static/: api.js  app.js  dag.js  index.html  style.css
spore/workspace/: batching.py  prepare.py  train.py
test/: conftest.py  test_agent.py  test_batching.py  test_challenge.py  test_daemon.py  test_explorer.py  test_gossip.py  test_graph.py  test_integration.py  test_loop.py  test_node.py  test_record.py  test_rewards.py  test_runner.py  test_store.py  test_token.py  test_verify.py
